[package]
name = "flyio-gossip-glomers-challenge"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio ={ version = "1",  features = ["macros", "rt-multi-thread"] }
serde_json = "1.0"
serde = { version = "1", features = ["derive"] }
maelstrom-node="0.1.6"
async-trait = "0.1.68"
uuid = { version = "1.12.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
redb = "2"
log = "0.4"
rand = "0.8"
